update background and add graph generation section

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -249,3 +249,28 @@
 	Abstract = {Like many organisms the fungal pathogen Candida albicans senses changes in the environmental CO(2) concentration. This response involves two major proteins: adenylyl cyclase and carbonic anhydrase (CA). Here, we demonstrate that CA expression is tightly controlled by the availability of CO(2) and identify the bZIP transcription factor Rca1p as the first CO(2) regulator of CA expression in yeast. We show that Rca1p upregulates CA expression during contact with mammalian phagocytes and demonstrate that serine 124 is critical for Rca1p signaling, which occurs independently of adenylyl cyclase. ChIP-chip analysis and the identification of Rca1p orthologs in the model yeast Saccharomyces cerevisiae (Cst6p) point to the broad significance of this novel pathway in fungi. By using advanced microscopy we visualize for the first time the impact of CO(2) build-up on gene expression in entire fungal populations with an exceptional level of detail. Our results present the bZIP protein Rca1p as the first fungal regulator of carbonic anhydrase, and reveal the existence of an adenylyl cyclase independent CO(2) sensing pathway in yeast. Rca1p appears to regulate cellular metabolism in response to CO(2) availability in environments as diverse as the phagosome, yeast communities or liquid culture.},
 	URL = {https://europepmc.org/articles/PMC3257301},
 }
+@article{PMID338821209,
+    author = {Hatos, András and Quaglia, Federica and Piovesan, Damiano and Tosatto, Silvio C E},
+    title = {APICURON: a database to credit and acknowledge the work of biocurators},
+    journal = {Database},
+    volume = {2021},
+    pages = {baab019},
+    year = {2021},
+    month = {04},
+    doi = {10.1093/database/baab019},
+    url = {https://doi.org/10.1093/database/baab019},
+    eprint = {https://academic.oup.com/database/article-pdf/doi/10.1093/database/baab019/37243737/baab019.pdf},
+}
+@article{PMID23768135,
+  title = {{{bioNerDS}}: Exploring Bioinformatics' Database and Software Use through Literature Mining},
+  author = {Duck, Geraint and Nenadic, Goran and Brass, Andy and Robertson, David L. and Stevens, Robert},
+  year = {2013},
+  month = jun,
+  journal = {BMC Bioinformatics},
+  volume = {14},
+  number = {1},
+  pages = {194},
+  issn = {1471-2105},
+  doi = {10.1186/1471-2105-14-194},
+  abstract = {Biology-focused databases and software define bioinformatics and their use is central to computational biology. In such a complex and dynamic field, it is of interest to understand what resources are available, which are used, how much they are used, and for what they are used. While scholarly literature surveys can provide some insights, large-scale computer-based approaches to identify mentions of bioinformatics databases and software from primary literature would automate systematic cataloguing, facilitate the monitoring of usage, and provide the foundations for the recovery of computational methods for analysing biological data, with the long-term aim of identifying best/common practice in different areas of biology.}
+}
