--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -274,3 +274,12 @@
   doi = {10.1186/1471-2105-14-194},
   abstract = {Biology-focused databases and software define bioinformatics and their use is central to computational biology. In such a complex and dynamic field, it is of interest to understand what resources are available, which are used, how much they are used, and for what they are used. While scholarly literature surveys can provide some insights, large-scale computer-based approaches to identify mentions of bioinformatics databases and software from primary literature would automate systematic cataloguing, facilitate the monitoring of usage, and provide the foundations for the recovery of computational methods for analysing biological data, with the long-term aim of identifying best/common practice in different areas of biology.}
 }
+
+@misc{OpenAIRE,
+	author = {Katerina Iatropoulou},
+	title = {{O}pen{A}{I}{R}{E} --- openaire.eu},
+	howpublished = {\url{https://www.openaire.eu/}},
+	year = {},
+	note = {[Accessed 21-03-2025]},
+}
+
