--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -283,3 +283,22 @@
 	note = {[Accessed 21-03-2025]},
 }
 
+@inproceedings{bodapati-etal-2019-robustness,
+    title = "Robustness to Capitalization Errors in Named Entity Recognition",
+    author = "Bodapati, Sravan  and
+      Yun, Hyokun  and
+      Al-Onaizan, Yaser",
+    editor = "Xu, Wei  and
+      Ritter, Alan  and
+      Baldwin, Tim  and
+      Rahimi, Afshin",
+    booktitle = "Proceedings of the 5th Workshop on Noisy User-generated Text (W-NUT 2019)",
+    month = nov,
+    year = "2019",
+    address = "Hong Kong, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D19-5531/",
+    doi = "10.18653/v1/D19-5531",
+    pages = "237--242",
+    abstract = "Robustness to capitalization errors is a highly desirable characteristic of named entity recognizers, yet we find standard models for the task are surprisingly brittle to such noise. Existing methods to improve robustness to the noise completely discard given orthographic information, which significantly degrades their performance on well-formed text. We propose a simple alternative approach based on data augmentation, which allows the model to learn to utilize or ignore orthographic information depending on its usefulness in the context. It achieves competitive robustness to capitalization errors while making negligible compromise to its performance on well-formed text and significantly improving generalization power on noisy user-generated text. Our experiments clearly and consistently validate our claim across different types of machine learning models, languages, and dataset sizes."
+}
