--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -283,7 +283,7 @@
 	note = {[Accessed 21-03-2025]},
 }
 
-@inproceedings{bodapati-etal-2019-robustness,
+@inproceedings{Bodapati,
     title = "Robustness to Capitalization Errors in Named Entity Recognition",
     author = "Bodapati, Sravan  and
       Yun, Hyokun  and
