--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -236,7 +236,7 @@
 	URL = {https://europepmc.org/articles/PMC7575043},
 }
 @article {PMID22253597,
-	Title = {The bZIP transcription factor Rca1p is a central regulator of a novel CO₂ sensing pathway in yeast},
+	Title = {The bZIP transcription factor Rca1p is a central regulator of a novel CO2 sensing pathway in yeast},
 	Author = {Cottier, Fabien and Raymond, Martine and Kurzai, Oliver and Bolstad, Marianne and Leewattanapasuk, Worraanong and Jiménez-López, Claudia and Lorenz, Michael C and Sanglard, Dominique and Váchová, Libuše and Pavelka, Norman and Palková, Zdena and Mühlschlegel, Fritz A},
 	DOI = {10.1371/journal.ppat.1002485},
 	Number = {1},
