--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -302,3 +302,18 @@
     pages = "237--242",
     abstract = "Robustness to capitalization errors is a highly desirable characteristic of named entity recognizers, yet we find standard models for the task are surprisingly brittle to such noise. Existing methods to improve robustness to the noise completely discard given orthographic information, which significantly degrades their performance on well-formed text. We propose a simple alternative approach based on data augmentation, which allows the model to learn to utilize or ignore orthographic information depending on its usefulness in the context. It achieves competitive robustness to capitalization errors while making negligible compromise to its performance on well-formed text and significantly improving generalization power on noisy user-generated text. Our experiments clearly and consistently validate our claim across different types of machine learning models, languages, and dataset sizes."
 }
+
+@article {PMID:28554980,
+	Title = {Comets: looking ahead},
+	Author = {A'Hearn, Michael F},
+	DOI = {10.1098/rsta.2016.0261},
+	Number = {2097},
+	Volume = {375},
+	Month = {July},
+	Year = {2017},
+	Journal = {Philosophical transactions. Series A, Mathematical, physical, and engineering sciences},
+	ISSN = {1364-503X},
+	Pages = {20160261},
+	Abstract = {We outline the key questions about comets that must be answered in order to understand cometary formation in the context of the protoplanetary disc and the role of comets in the formation and evolution of the solar system. We then discuss the new understanding of comets from Rosetta and from other recent advances, including work presented by others at the discussion meeting. Finally, we suggest some key directions for future projects to better address the above questions.This article is part of the themed issue 'Cometary science after Rosetta'.},
+	URL = {https://europepmc.org/articles/PMC5454229},
+}
